# xtuml-compiler

./: .gitignore  Cargo.toml  README.md
.github/workflows/: release.yml
models/: README.md  Toko_Online_model.js  example_model.json  example_spp.json
src/: main.rs  parser.rs  semantic.rs
src/generator/: javascript.rs  python.rs
src/templates/javascript/: associations.js.tera  class.js.tera  footer.js.tera  header.js.tera  macros.tera  runtime.js.tera  state.js.tera  state_machine.js.tera
src/templates/python/: class.py.tera  footer.py.tera  header.py.tera
