[package]
name = "xtuml-compiler"
version = "0.1.2"
edition = "2024"

[[bin]]
name = "xtuml-compiler"
path = "src/main.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.1", features = ["derive"] }
tera = "1.20.1"
anyhow = "1.0"
walkdir = "2.3"
include_dir = "0.7"